src/test/deca/context/invalid/method_already_declared.deca
// Test de la règle TODOTEST ?? : la méthode déclarée porte un nom de méthode
// déjà attribuée dans la classe

class A  {
    void displayHello(){
        println("Hello");
    }
    
    void displayHello(){
        println("Hi");
    }
}

// Resultat:
//# TODOTEST
